--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"astro": "^2.0.9"
+		"@astrojs/tailwind": "^3.0.1",
+		"astro": "^2.0.4",
+		"daisyui": "^2.50.0",
+		"tailwindcss": "^3.0.24",
+		"theme-change": "^2.3.0"
+	},
+	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.9"
 	}
 }
