--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"astro": "astro"
 	},
 	"dependencies": {
+		"@astrojs/rss": "^2.1.0",
 		"@astrojs/tailwind": "^3.0.1",
 		"astro": "^2.0.4",
 		"daisyui": "^2.50.0",
