--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"astro": "astro"
 	},
 	"dependencies": {
+		"@astrojs/mdx": "^0.16.2",
 		"@astrojs/rss": "^2.1.0",
 		"@astrojs/sitemap": "^1.0.1",
 		"@astrojs/tailwind": "^3.0.1",
