--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 		"theme-change": "^2.5.0"
 	},
 	"devDependencies": {
-		"@tailwindcss/typography": "^0.5.10"
+		"@tailwindcss/typography": "^0.5.10",
+		"prettier": "^3.1.0",
+		"prettier-plugin-astro": "^0.12.2"
 	}
 }
