--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,15 @@ dist/
 # dependencies
 node_modules/
 
+# https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 # logs
 npm-debug.log*
 yarn-debug.log*
