--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
         "astro": "astro"
     },
     "dependencies": {
-        "@astrojs/mdx": "^3.1.2",
+        "@astrojs/mdx": "^3.1.3",
         "@astrojs/rss": "^4.0.7",
         "@astrojs/sitemap": "^3.1.6",
         "@astrojs/tailwind": "^5.1.0",
-        "astro": "^4.11.5",
+        "astro": "^4.12.2",
         "daisyui": "^4.12.10",
         "sass": "^1.77.8",
-        "tailwindcss": "^3.4.6",
+        "tailwindcss": "^3.4.7",
         "theme-change": "^2.5.0"
     },
     "devDependencies": {
@@ -36,5 +36,6 @@
         "arrowParens": "avoid",
         "proseWrap": "preserve",
         "endOfLine": "lf"
-    }
+    },
+    "packageManager": "yarn@4.3.1"
 }
