--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
         "astro": "astro"
     },
     "dependencies": {
-        "@astrojs/mdx": "^3.1.3",
+        "@astrojs/mdx": "3.1.4",
         "@astrojs/rss": "^4.0.7",
         "@astrojs/sitemap": "^3.1.6",
         "@astrojs/tailwind": "^5.1.0",
-        "astro": "^4.12.2",
+        "astro": "4.14.5",
         "daisyui": "^4.12.10",
         "sass": "^1.77.8",
         "tailwindcss": "^3.4.7",
-        "theme-change": "^2.5.0"
+        "theme-change": "^2.5.0",
+        "typescript": "^5.5.4",
+        "zod": "^3.23.8",
+        "zod-to-ts": "^1.2.0"
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.13",
