--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
         "astro": "astro"
     },
     "dependencies": {
-        "@astrojs/mdx": "3.1.5",
-        "@astrojs/rss": "^4.0.7",
-        "@astrojs/sitemap": "^3.1.6",
-        "@astrojs/tailwind": "^5.1.0",
-        "astro": "4.16.1",
+        "@astrojs/mdx": "3.1.8",
+        "@astrojs/rss": "4.0.8",
+        "@astrojs/sitemap": "3.2.1",
+        "@astrojs/tailwind": "5.1.2",
+        "astro": "4.16.4",
         "daisyui": "^4.12.10",
         "sass": "^1.77.8",
         "tailwindcss": "^3.4.7",
