--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "zod-to-ts": "^1.2.0"
     },
     "devDependencies": {
+        "@catppuccin/daisyui": "^2.0.0",
         "@tailwindcss/typography": "^0.5.16",
         "prettier": "^3.3.3",
         "prettier-plugin-astro": "^0.14.1"
