--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@tailwindcss/vite": "^4.1.14",
     "astro": "5.15.1",
     "daisyui": "^5.3.0",
+    "mdast-util-to-string": "^4.0.0",
+    "reading-time": "^1.5.0",
     "sass": "^1.93.2",
     "tailwindcss": "^4.1.14",
     "theme-change": "^2.5.0"
