--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "daisyui": "^5.3.0",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
+    "remark-toc": "^9.0.0",
     "sass": "^1.93.2",
     "tailwindcss": "^4.1.14",
     "theme-change": "^2.5.0"
