--- a/package.json
+++ b/package.json
@@ -10,24 +10,24 @@
     "astro": "astro"
   },
   "dependencies": {
+    "theme-change": "^2.5.0"
+  },
+  "devDependencies": {
     "@astrojs/mdx": "4.3.8",
     "@astrojs/rss": "4.0.13",
     "@astrojs/sitemap": "3.6.0",
+    "@catppuccin/daisyui": "^2.1.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.14",
     "astro": "5.15.1",
     "daisyui": "^5.3.0",
     "mdast-util-to-string": "^4.0.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-astro": "^0.14.1",
     "reading-time": "^1.5.0",
     "remark-toc": "^9.0.0",
     "sass": "^1.93.2",
-    "tailwindcss": "^4.1.14",
-    "theme-change": "^2.5.0"
-  },
-  "devDependencies": {
-    "@catppuccin/daisyui": "^2.1.1",
-    "@tailwindcss/typography": "^0.5.16",
-    "prettier": "^3.6.2",
-    "prettier-plugin-astro": "^0.14.1"
+    "tailwindcss": "^4.1.14"
   },
   "prettier": {
     "printWidth": 120,
