--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
     "reading-time": "^1.5.0",
+    "rehype-callouts": "^2.1.2",
     "remark-toc": "^9.0.0",
     "sass": "^1.93.2",
     "tailwindcss": "^4.1.14"
