--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier-plugin-astro": "^0.14.1",
     "reading-time": "^1.5.0",
     "rehype-callouts": "^2.1.2",
+    "rehype-external-links": "^3.0.0",
     "remark-toc": "^9.0.0",
     "sass": "^1.93.2",
     "tailwindcss": "^4.1.14"
