--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.14",
     "astro": "5.15.1",
+    "astro-expressive-code": "^0.41.3",
     "daisyui": "^5.3.0",
     "mdast-util-to-string": "^4.0.0",
     "prettier": "^3.6.2",
