--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,11 @@
 # build output
 dist/
+
 # generated types
 .astro/
 
 # dependencies
 node_modules/
-
-# https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
-.yarn/*
-!.yarn/cache
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
 
 # logs
 npm-debug.log*
@@ -21,6 +13,8 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
+# pnpm
+pnpm-lock.yaml
 
 # environment variables
 .env
